--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,11 @@
-<h1>Chirper</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  chirper application.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the Chirper</h1>
+
+  <h2>
+    This is the home page of chirper app for the RoR Developers</a>.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
